<resources>
    <string name="app_name">Grocery</string>
    <string name="sign_In">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to Grocery App</string>
    <string name="getStarted_text">Let\'s get started</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="one_kilo">1KG</string>
    <string name="itemNameExample">Bell Pepper Red</string>
    <string name="itemPriceExample">90.00 EGP</string>
    <string name="quantity">Quantity</string>
    <string name="number">2</string>
    <string name="plus_description">plus image to increase amount</string>
    <string name="minus_description">minus image to decrease amount</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="back_image">back image act as button to go back</string>
    <string name="grocery_app_deals">Grocery App Deals</string>
    <string name="love_image">love image act as button to add item to love list</string>
    <string name="search_image">search image act as button to navigate to search page</string>
    <string name="welcome_to">Welcome to</string>
    <string name="Grocery">Grocery</string>
    <string name="Shopping">Shopping</string>
    <string name="shopping">shopping</string>
    <string name="logo_Description">A big green K in the middle surrounded by white background.</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="correct_sign_description">white Correct Sign with circular green background</string>
    <string name="verification_text">You\'ve signed up successfully!\nYou can Now continue using Grocery Shopping Store.</string>
    <string name="later">Later</string>
    <string name="pin_description">grey map pin</string>
    <string name="sample_address">23111 Borg Alarab, Alexandria</string>
    <string name="change_address">Change Address</string>
    <string name="sample_item_name">Bell Pepper Red</string>
    <string name="sample_unit_price">90.00</string>
    <string name="sample_unit_price2"> EGP</string>
    <string name="unit_quantity">kg</string>

    <string name="sample_price">180.00 EGP</string>
    <string name="sample_number">1</string>
    <string name="sample_category_title">Beverages</string>
    <string name="sample_category">Chocolate Drink</string>
    <string name="sample_main_category">Grocery</string>
    <string name="item_image">Item Image</string>
    <string name="plus_rectangle_description">plus sign in a rectangle</string>
    <string name="minus_rectangle_description">minus sign in a rectangle</string>
    <string name="trash_description">grey trash icon</string>
    <string name="sign_in_to_grocery_app">Sign In to Grocery App</string>
    <string name="enter_email"><![CDATA[Enter email & password to continue]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="coffee">Coffee</string>
    <string name="nescafe_gold">Nescafe Gold </string>
    <string name="_47_00_egp">47.00 EGP</string>
    <string name="your_shopping_cart">Your shopping Cart</string>
    <string name="total">Total-</string>
    <string name="place_order">Place Order</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_arrow">Back Arrow button</string>
    <string name="search_button_description">White search Icon</string>
    <string name="coca_drinks_image">Fizzy Drinks of cola, sprite, coke,…etc</string>
    <string name="arrow">arrow</string>
    <string name="all_category">All Category</string>
    <string name="member_deals_title">Grocery App Member Deals</string>
    <string name="view_all">View All</string>
    <string name="rounded_arrow_description">Small arrow that points to the right</string>
    <string name="store">Store</string>
    <string name="list_button_description">list button which about 3 white lines indicating listing</string>
    <string name="grocery_shopping">Grocery Shopping</string>
    <string name="x_btn_description">X Button indicating collabsing</string>
    <string name="selective_item">Selective_item</string>
    <string name="order_history">Order History</string>
    <string name="exit_image">exit filter go back to result page</string>
    <string name="filter_by">Filter By</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="descending_order">Descending Order</string>
    <string name="name">Name</string>
    <string name="downImage_name">down image to show and hide filter items in name filter</string>
    <string name="brand">Brand</string>
    <string name="nescafe">Nescafe</string>
    <string name="starbucks">Starbucks</string>
    <string name="mccafe">McCAfe</string>
    <string name="khao">Khao</string>
    <string name="price_range">Price Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="max_price_filter">200.00</string>
    <string name="min_price_filter">0.00</string>
    <string name="search_by">Search By</string>
    <string name="no_result_image">no result image visible when there are no item</string>
    <string name="voice_image">voice image to open voice to search</string>
    <string name="construction_image_description">A Working man holds a shovel directed to sand indicating undergoing work</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="sort_price">Sort Price</string>
    <string name="sort_name">Sort Name</string>
    <string name="brand_nationality">Brand Nationality</string>
    <string name="_1">1</string>
    <string name="previous_page">previous page</string>
    <string name="next_page">next page</string>
    <string name="_100_00">100.00</string>
    <string name="no_search_result_found">No search Result Found!</string>
    <string name="type_your_address">type your address</string>
    <string name="order_1001">Order#1001</string>
    <string name="rate_this_order">Rate this order</string>
    <string name="sample_place_date_text">Placed on 24 Feb 2021</string>
    <string name="_120_00_egp">120.00 EGP</string>
    <string name="grocery_shopin">Grocery Shopping</string>
    <string name="order_1000">Order#1000</string>
    <string name="order_no">Order no.</string>
    <string name="placed_on">Placed On</string>
    <string name="_1000">1000</string>
    <string name="_24_feb_2021">24 Feb 2021</string>
    <string name="shipment_3_items">Shipment (3 Items)</string>
    <string name="delivered_by_grocery_shopping">Delivered by Grocery-Shopping</string>
    <string name="delivering_on_10_january_2024">Delivering on 10 January 2024, 12:00 PM</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="egypt_japan_university_of_science_and_technology_borg_el_arab_alexandria">Egypt Japan University of Science and Technology, Borg El-arab, Alexandria</string>
    <string name="buy_again">Buy Again</string>
    <string name="_3_items">3 Items</string>
    <string name="shipment_summary">Shipment summary</string>
    <string name="subtotle">Subtotal</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="shipment_total_inc_vat">Shipment Total (inc.VAT)</string>
    <string name="egp_619_2">EGP 619.2</string>
    <string name="egp_20">EGP 20</string>
    <string name="egp_740">EGP 740</string>
    <string name="_150_egp">- 150 EGP</string>
    <string name="quantity_2">Quantity: 2</string>
    <string name="_340_00_egp">340.00 EGP</string>

</resources>