<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="#fff"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/searchButton_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/search_image"
                android:src="@drawable/search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="40dp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:hint="@string/search_by"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold"
                 />

            <ImageView
                android:id="@+id/exitButton_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/exit_image"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:src="@drawable/x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/voiceButton_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/voice_image"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end"
                android:src="@drawable/icon_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>

        <ListView
            android:id="@+id/searchItems_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
        <ImageView
            android:id="@+id/noResult_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/myToolbar"
            android:contentDescription="@string/no_result_image" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>