<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:padding="15dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/corrupt"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nescafe_gold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/price_per_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_150_egp"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="RelativeOverlap" />
    </LinearLayout>
        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_2"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_340_00_egp"
            android:textColor="#303030"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="RelativeOverlap" />
    </LinearLayout>
    <ImageButton
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/black_front_arrow"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>
</RelativeLayout>